[package]
name = "r_map"
version = "0.1.0"
edition = "2021"
description = "Fast and memory efficient Immutable Map data-structure"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

[dev-dependencies]
pretty_assertions = "1.2.1"