[package]
name = "r_map"
version = "0.1.0"
edition = "2021"
description = "Fast and memory efficient Immutable Map data-structure"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
samples = []

[dependencies]
# futures = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "rule110"
path = "src/rule110.rs"

[[bench]]
name = "benchmarks"
harness = false
# required-features = ["samples"]